# sign2eng.cs-gdg.osu

./: Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .flake8  Dockerfile  Makefile  pyproject.toml
backend/src/: main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: page.tsx
