[project]
name = "sign2eng-cs-gdg-osu"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic[email,timezone] (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "sign2eng"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
skip = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  ".mypy_cache",
  ".pytest_cache",
  "migrations",
]
