[project]
name = "sign2eng-cs-gdg-osu"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.128.0,<0.129.0)",
    "pydantic[email,timezone] (>=2.12.5,<3.0.0)"
]

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 150
target-version = ["py314"]
skip-string-normalization = false
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | \.mypy_cache
  | \.pytest_cache
  | .*/migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
combine_as_imports = true
skip = [
  ".venv",
  "build",
  "dist",
  "__pycache__",
  ".mypy_cache",
  ".pytest_cache",
  "migrations",
]
